acmeair-kc/acme-air-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: acme-web 
  name: acme-web
  namespace: acme-air
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acme-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: acme-web
    spec:
      affinity: {}
      containers:
      - args:
        - npm
        - start
        image: garreeoke/acmenode:86
        imagePullPolicy: Always
        name: acme-web
        ports:
        - containerPort: 3000
          name: http-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http-port
        readinessProbe:
          httpGet:
            path: /
            port: http-port
        resources: 
          requests:
            memory: "50Mi" 
            cpu: "15m"
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
