acmeair-kc/acme-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-web
  namespace: acme-air
  annotations: 
    #kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: acme-air.work.garreeoke.io
    http:
      paths:
      - backend:
          serviceName: acme-web
          servicePort: 3000
